# KSCrash

./: .gitignore  .travis.yml  Architecture.md  CHANGELOG  LICENSE  Makefile  README.md  SentryCrash.podspec
Android/Source/: SentryCrashCachedData.c  SentryCrashJNI.cpp  SentryCrashJNI.h  kscrash-lib.cpp
Android/Source/monitors/: SentryCrashMonitor_System.c  SentryCrashMonitor_System.h
Android/Source/tools/: SentryCrashCPU.c  SentryCrashDebug.c  SentryCrashDynamicLinker.c  SentryCrashID.cpp  SentryCrashMachineContext.c  SentryCrashMachineContext_Android.h  SentryCrashMemory.c  SentryCrashStackCursor_SelfThread.c  SentryCrashSymbolicator.c  SentryCrashThread.c
Android/app/: CMakeLists.txt  build.gradle
Android/app/src/androidTest/java/org/stenerud/kscrash/: ExampleInstrumentedTest.java
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/java/org/stenerud/kscrash/: MainActivity.java  MultipartPostBody.java  SentryCrash.java  SentryCrashInstallation.java  SentryCrashInstallationEmail.java  SentryCrashInstallationStandard.java  SentryCrashReportFilter.java  SentryCrashReportFilterCreateTempFiles.java  SentryCrashReportFilterDeleteFiles.java  SentryCrashReportFilterEmail.java  SentryCrashReportFilterGZipCompress.java  SentryCrashReportFilterHttp.java  SentryCrashReportFilterJSONEncode.java  SentryCrashReportFilterPipeline.java  SentryCrashReportFilteringFailedException.java
Android/app/src/main/res/layout/: activity_main.xml
Android/app/src/main/res/values/: strings.xml
Android/app/src/test/java/org/stenerud/kscrash/: SentryCrashReportFilterFilesTest.java  SentryCrashReportFilterGZipCompressTest.java  SentryCrashReportFilterJSONEncodeTest.java
Example-Reports/: Abort.json  Abort.txt  BadPointer.json  BadPointer.txt  CorruptMemory.json  CorruptMemory.txt  CorruptObject.json  CorruptObject.txt  CrashInHandler.json  CrashInHandler.txt  MainThreadDeadlock.json  MainThreadDeadlock.txt  NSException.json  NSException.txt  StackOverflow.json  StackOverflow.txt  Zombie.json  Zombie.txt  ZombieNSException.json  ZombieNSException.txt  _README.md
Mac/: Configuration.h
Mac.xcworkspace/: contents.xcworkspacedata
Mac/Crash-Tester/: AppDelegate.m
Mac/Crash-Tester/Base.lproj/: MainMenu.xib
Mac/Example-Apps-Mac.xcodeproj/: project.pbxproj
Mac/SentryCrash-Mac.xcodeproj/: project.pbxproj
Mac/SentryCrash-Mac.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Mac/Simple-Example/: AppDelegate.m
Source/Common-Examples/: CrashTesterCommands.h  CrashTesterCommands.m  Crasher.mm
Source/Framework/: SentryCrashFramework.h  module.modulemap
Source/SentryCrash-Tests/: KSLogger_Tests.m  SentryCrashCachedData_Tests.m  SentryCrashInstallationEmail_Tests.m  SentryCrashInstallationQuincyHockey_Tests.m  SentryCrashInstallationStandard_Tests.m  SentryCrashInstallationVictory_Tests.m  SentryCrashMonitor_AppState_Tests.m  SentryCrashMonitor_Deadlock_Tests.m  SentryCrashMonitor_NSException_Tests.m  SentryCrashMonitor_Signal_Tests.m  SentryCrashMonitor_Tests.m  SentryCrashMonitor_Zombie_Tests.m  SentryCrashObjC_Tests.m  SentryCrashReportConverter_Tests.m  SentryCrashReportFilterAlert_Tests.m  SentryCrashReportFilterGZip_Tests.m  SentryCrashReportFilterJSON_Tests.m  SentryCrashReportFilter_Tests.m  SentryCrashReportFixer_Tests.m  SentryCrashReportStore_Tests.m
Source/SentryCrash/Installations/: SentryCrashInstallation+Alert.h  SentryCrashInstallation+Alert.m  SentryCrashInstallation.h  SentryCrashInstallation.m  SentryCrashInstallationConsole.h  SentryCrashInstallationConsole.m  SentryCrashInstallationEmail.h  SentryCrashInstallationEmail.m  SentryCrashInstallationQuincyHockey.h  SentryCrashInstallationQuincyHockey.m  SentryCrashInstallationStandard.h  SentryCrashInstallationStandard.m  SentryCrashInstallationVictory.h  SentryCrashInstallationVictory.m
Source/SentryCrash/Recording/: SentryCrash.h  SentryCrash.m  SentryCrashC.c  SentryCrashC.h  SentryCrashCachedData.c  SentryCrashCachedData.h  SentryCrashReport.c  SentryCrashReport.h  SentryCrashReportFixer.c  SentryCrashReportFixer.h  SentryCrashReportStore.c  SentryCrashReportStore.h  SentryCrashReportVersion.h  SentryCrashReportWriter.h
TVOS.xcworkspace/: contents.xcworkspacedata
TVOS/Example-Apps-TVOS.xcodeproj/: project.pbxproj
TVOS/SentryCrash-TVOS.xcodeproj/: project.pbxproj
TVOS/SimpleExample/: AppDelegate.m
WatchOS.xcworkspace/: contents.xcworkspacedata
WatchOS/CrashExample/CrashExample WatchKit App/: Info.plist
WatchOS/CrashExample/CrashExample WatchKit Extension/: ExtensionDelegate.m  Info.plist
WatchOS/CrashExample/CrashExample.xcodeproj/: project.pbxproj
WatchOS/SentryCrash.xcodeproj/: project.pbxproj
WatchOS/SentryCrash.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Webapp/: README.md
iOS.xcworkspace/: contents.xcworkspacedata
iOS/Advanced-Example/: AppDelegate.h  AppDelegate.m  LoaderVC.m  MainVC.m
iOS/Advanced-Example/Base.lproj/: Main.storyboard
iOS/Crash-Tester/: AppDelegate+UI.m  AppDelegate.m
iOS/Example-Apps-iOS.xcodeproj/: project.pbxproj
iOS/SentryCrash-iOS.xcodeproj/: project.pbxproj
iOS/Simple-Example/: AppDelegate.m
iOS/Swift-Tester/: AppDelegate.swift  BridgeHeader.h
tests/: processed.json  raw.json
(+62 files in other folders)
